# SecureRelayFL

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_all.sh
data/: dataset.py
data/generator/: generate.py
figures/: gen_figures.py
logbook/: PROGRESS_NOTES.md  log_2_alternative_baselines.md
src/securerelayfl/analysis/: goose_dual_layer.py
src/securerelayfl/experiments/: axis1_impairment.py  axis2_privacy.py
src/securerelayfl/fl/: client.py  impaired_strategy.py  server.py
src/securerelayfl/models/: fault_classifier.py  fault_classifier_v2.py  tcn_classifier.py  train_centralized.py
tests/: test_generate.py
