[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "securerelay-fl"
version = "0.1.0"
description = "Privacy-preserving federated learning for adaptive relay protection over industrial communication networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Shankar", email = "placeholder@example.com"},
]
keywords = [
    "federated-learning",
    "power-system-protection",
    "differential-privacy",
    "industrial-communication",
    "relay-settings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # ---------- data generation ----------
    "numpy>=1.26,<2.1",
    "pandas>=2.1,<2.3",

    # ---------- ML / deep learning ----------
    "torch>=2.2,<2.5",
    "torchvision>=0.17,<0.20",
    "scikit-learn>=1.4,<1.6",

    # ---------- federated learning ----------
    "flwr[simulation]>=1.7,<1.13",       # Flower FL framework

    # ---------- differential privacy ----------
    "opacus>=1.4,<1.6",                   # DP-SGD for PyTorch

    # ---------- experiment tracking ----------
    "tensorboard>=2.16,<2.19",
    "pyyaml>=6.0,<6.1",

    # ---------- figures & analysis ----------
    "matplotlib>=3.8,<3.10",
    "seaborn>=0.13,<0.14",

    # ---------- utilities ----------
    "tqdm>=4.66,<4.68",
    "h5py>=3.10,<3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<8.4",
    "pytest-cov>=5.0,<5.1",
    "ruff>=0.3,<0.5",
    "pre-commit>=3.6,<3.9",
    "ipykernel>=6.29,<6.30",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/PLACEHOLDER/SecureRelayFL"

# ---------- tool configs ----------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
